syntax = "proto3";

package turnly.business_data_fields.v1.fields;

import "fields.requests.proto";
import "fields.responses.proto";

service Fields {
  rpc FindCustomerFieldsByService(FindCustomerFieldsByServiceRequest)
    returns (FindCustomerFieldsByServiceResponse) {}
}
