syntax = "proto3";

package turnly.business_data_fields.v1.fields;

message FindCustomerFieldsByServiceRequest {
  string service_id = 1;
}
